--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a-box src="https://i.imgur.com/mYmmbrp.jpg" position="0 2 -5" rotation="0 45 45" scale="2 2 2" animation="property: object3D.position.y; to: 2.2; dir: alternate; dur: 2000; loop: true"></a-box>
     <a-cylinder position="1 0.75 -3" cursor-listener radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
     <!--<a-asset-item id="ghost" src="assets/Ghost.gltf"></a-asset-item> this is a import of a item-->
-    <a-sky color="#ECECEC"></a-sky>
+    <a-sky color="#C52A2A"></a-sky>
     <a-entity environment="preset: forest; dressingAmount: 500"></a-entity>
   </a-scene>
 
